# jet

./: .gitignore  1  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCTION_READINESS.md  README.md  SECURITY.md  deny.toml  integration_test_results.txt
benches/: Cargo.toml  compile_time.rs  gc_benchmark.rs  lexer_benchmark.rs  parser_benchmark.rs  runtime_benchmark.rs
compiler/codegen/: Cargo.toml  build.rs
compiler/codegen/src/: async_gen.rs  closure.rs  coerce.rs  context.rs  effect.rs  error.rs  function.rs  gc.rs  global.rs  glue.rs  instr.rs  lib.rs  llvm.rs  object.rs  pattern.rs  trait_obj.rs  types.rs
compiler/effect/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
compiler/effect/src/: checker.rs  effect.rs  error.rs  handler.rs  inference.rs  lib.rs
compiler/linker/: Cargo.toml
compiler/linker/src/: build.rs  cache.rs  error.rs  incremental.rs  lib.rs  linker.rs  platform.rs
compiler/literate/: Cargo.toml
compiler/literate/src/: error.rs  lib.rs
compiler/lower/: Cargo.toml
compiler/lower/src/: closure.rs  context.rs  effect.rs  expr.rs  function.rs  ghost.rs  lib.rs  pattern.rs  stmt.rs  ty.rs
compiler/lower/tests/: test_typed_expr_lowering.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: ast.rs  error.rs  lib.rs  lib.rs.backup  lib.rs.bak
compiler/parser/tests/: test_ai_annotations.rs  test_comprehensive.rs  test_contracts.rs  test_control_flow.rs  test_definitions.rs  test_errors.rs  test_expressions.rs  test_integration.rs  test_modules.rs  test_roundtrip.rs  test_statements.rs
compiler/resolve/: Cargo.toml
compiler/resolve/src/: def_id.rs  error.rs  import.rs  lib.rs  resolver.rs  symbol.rs
compiler/typeck/: Cargo.toml
compiler/typeck/src/: associated_types.rs  checker.rs  const_eval.rs  constraints.rs  contracts.rs  lib.rs  patterns.rs  semantic_eq.rs  spec_extract.rs  traits.rs  types.rs  unify.rs
compiler/typeck/tests/: test_comprehensive.rs  test_type_inference_edge_cases.rs
runtime/: Cargo.toml
runtime/ffi/: Cargo.toml
runtime/ffi/src/: function.rs  layout.rs  lib.rs  library.rs  marshal.rs  pinned.rs  trampoline.rs  types.rs  values.rs
runtime/gc/: Cargo.toml
runtime/gc/src/: allocator.rs  block.rs  collect.rs  header.rs  immix.rs  lib.rs  safe_point.rs  scheduler_integration.rs  stack_map.rs  thread_roots.rs  write_barrier.rs
runtime/gc/tests/: test_comprehensive.rs  test_stress.rs
runtime/sched/: Cargo.toml  build.rs
runtime/sched/src/: async_runtime.rs  await_impl.rs  context.rs  deadlock.rs  future.rs  gc_integration.rs  lib.rs  pin.rs  queue.rs  reactor.rs  stack.rs  task.rs  worker.rs
runtime/sched/tests/: test_comprehensive.rs  test_stress.rs
runtime/src/: builtins.rs  config.rs  context.rs  init.rs  lib.rs  panic.rs  reactor.rs  safe_point.rs  shutdown.rs  signal.rs  thread_coord.rs
runtime/src/effect/: async_integration.rs  continuation.rs  dispatch.rs  handler.rs  mod.rs  stack.rs
runtime/sync/: Cargo.toml
runtime/sync/src/: channel.rs  condvar.rs  error.rs  lib.rs  mutex.rs  rwlock.rs  select.rs
runtime/sync/tests/: test_comprehensive.rs  test_stress.rs
runtime/tests/: integration_tests.rs
stdlib/: Cargo.toml
stdlib/async/src/: channel.jet  future.jet  lib.jet  runtime.jet  task.jet  util.jet
stdlib/collections/src/: iter.jet  lib.jet  map.jet  set.jet  vec.jet
stdlib/collections/tests/: map_tests.jet  set_tests.jet  vec_tests.jet
stdlib/core/src/: assert.jet  error.jet  lib.jet  memory.jet  option.jet  panic.jet  result.jet  traits.jet
stdlib/core/tests/: error_tests.jet  option_tests.jet  result_tests.jet  traits_tests.jet
stdlib/io/src/: buffered.jet  error.jet  file.jet  lib.jet  path.jet  stdio.jet  traits.jet
stdlib/json/src/: lib.jet
stdlib/math/src/: basic.jet  lib.jet  matrix.jet  random.jet  trig.jet  vector.jet
stdlib/math/tests/: math_tests.jet
stdlib/net/src/: addr.jet  http.jet  lib.jet  tcp.jet  udp.jet  url.jet
stdlib/src/: alloc.rs  base64.rs  concurrent.rs  datetime.rs  ffi.rs  io.rs  json.rs  lib.jet  lib.rs  map.rs  math.rs  net.rs  option.rs  process.rs  result.rs  set.rs  string.rs  time.rs  traits.rs  url.rs  vec.rs
stdlib/string/src/: lib.jet  regex.jet  string.jet  string_builder.jet
stdlib/string/tests/: string_tests.jet
stdlib/sync/src/: atomic.jet  barrier.jet  condvar.jet  lib.jet  mutex.jet  rwlock.jet  semaphore.jet
stdlib/time/src/: lib.jet
tests/: Cargo.toml
tests/cases/: arithmetic.jet  functions.jet  hello_world.jet
tests/diagnostics/: effect_escaping_handler.jet  effect_escaping_handler.stderr  effect_handler_type_mismatch.jet  effect_handler_type_mismatch.stderr  effect_incomplete_handler.jet  effect_incomplete_handler.stderr  effect_missing_handler.jet  effect_missing_handler.stderr  effect_unhandled_async.jet  effect_unhandled_async.stderr  effect_unnecessary_declaration.jet  effect_unnecessary_declaration.stderr
tests/expected/: arithmetic.txt  functions.txt  hello_world.txt
tests/golden/: indentation_error.golden  invalid_escape.golden  line_comment.golden  missing_colon.golden  unclosed_paren.golden  unclosed_string.golden  unexpected_token.golden
tests/language-spec/: 01_lexical.jet  02_types.jet  03_effects.jet  04_concurrency.jet  05_control_flow.jet
tests/src/: golden.rs  harness.rs  lib.rs
tests/tests/: test_codegen_integration.rs  test_compiler_pipeline.rs  test_effect_properties.rs  test_error_messages.rs  test_examples.rs  test_golden_files.rs  test_integration_advanced.rs  test_integration_comprehensive.rs  test_lexer_integration.rs  test_parser_integration.rs
tools/cli/: Cargo.toml
tools/cli/src/: dependencies.rs  errors.rs  main.rs  manifest.rs  pipeline.rs  project.rs  publish.rs
tools/fmt/: Cargo.toml
tools/fmt/src/: config.rs  lib.rs  main.rs
tools/jetdoc/: Cargo.toml
tools/jetdoc/src/: extract.rs  html.rs  lib.rs  main.rs  test_examples.rs
tools/jetdoc/tests/: test_extract.rs
tools/jetpkg/: Cargo.toml
tools/jetrefactor/: Cargo.toml
tools/jettest/: Cargo.toml
tools/lint/: Cargo.toml
tools/lsp/: Cargo.toml
tools/repl/: Cargo.toml
(+153 files in other folders)
