[package]
name = "jet-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Jet Runtime - Integrated runtime system for the Jet programming language"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
# Runtime components
jet-rt-gc = { path = "gc" }
jet-rt-sched = { path = "sched" }
jet-rt-sync = { path = "sync" }
jet-rt-ffi = { path = "ffi" }

# External dependencies
libc = { workspace = true }
crossbeam = { workspace = true }
once_cell = "1.19"
parking_lot = "0.12"
thiserror = { workspace = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["std"]
std = []
log = ["tracing"]

[dev-dependencies]
pretty_assertions = { workspace = true }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
