[package]
name = "jet-integration-tests"
version = "1.0.0"
edition = "2021"

[dependencies]
jet-lexer = { path = "../compiler/lexer" }
jet-parser = { path = "../compiler/parser" }
jet-diagnostics = { path = "../compiler/diagnostics" }
jet-effect = { path = "../compiler/effect" }
jet-ir = { path = "../compiler/ir" }

anyhow = "1.0"
tempfile = "3.8"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
