[package]
name = "jet-resolve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jet-parser = { path = "../parser" }
jet-diagnostics = { path = "../diagnostics" }
jet-lexer = { path = "../lexer" }
indexmap = "2.0"

[dev-dependencies]
pretty_assertions.workspace = true
