[package]
name = "jet-rt-sched"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam = { workspace = true }
crossbeam-deque = "0.8"
libc = { workspace = true }
jet-rt-gc = { path = "../gc" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
pretty_assertions.workspace = true
