[package]
name = "jet-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jet"
path = "src/main.rs"

[dependencies]
jet-lexer = { path = "../../compiler/lexer" }
jet-parser = { path = "../../compiler/parser" }
jet-resolve = { path = "../../compiler/resolve" }
jet-typeck = { path = "../../compiler/typeck" }
jet-lower = { path = "../../compiler/lower" }
jet-ir = { path = "../../compiler/ir" }
jet-linker = { path = "../../compiler/linker" }
jet-diagnostics = { path = "../../compiler/diagnostics" }
jet-codegen = { path = "../../compiler/codegen" }
jet-fmt = { path = "../fmt" }
jet-lint = { path = "../lint" }
jet-repl = { path = "../repl" }
clap = { workspace = true, features = ["derive", "cargo"] }
colored = "2.1"
anyhow = { workspace = true }
tokio = { version = "1", features = ["full"] }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
walkdir = "2"
termcolor = "1.4"
glob = "0.3"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
num_cpus = "1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
inkwell = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions.workspace = true
tempfile = "3"
