[package]
name = "jetpkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jetpkg"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
semver = "1.0"
walkdir = "2"
termcolor = "1.4"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
tar = "0.4"
flate2 = "1.0"
git2 = "0.18"
base64 = "0.22"

[dev-dependencies]
pretty_assertions.workspace = true
