[package]
name = "jettest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Automatic test generation for the Jet programming language"

[[bin]]
name = "jettest"
path = "src/main.rs"

[dependencies]
# Core Jet compiler crates
jet-parser = { path = "../../compiler/parser" }
jet-lexer = { path = "../../compiler/lexer" }
jet-typeck = { path = "../../compiler/typeck" }
jet-effect = { path = "../../compiler/effect" }
jet-diagnostics = { path = "../../compiler/diagnostics" }

# External dependencies
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"

[dev-dependencies]
pretty_assertions = { workspace = true }
