[package]
name = "jet-repl"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jet-repl"
path = "src/main.rs"

[dependencies]
jet-lexer = { path = "../../compiler/lexer" }
jet-parser = { path = "../../compiler/parser" }
jet-diagnostics = { path = "../../compiler/diagnostics" }
jet-resolve = { path = "../../compiler/resolve" }
jet-typeck = { path = "../../compiler/typeck" }
jet-codegen = { path = "../../compiler/codegen" }
jet-ir = { path = "../../compiler/ir" }
jet-lower = { path = "../../compiler/lower" }

rustyline = "14.0"
rustyline-derive = "0.10"
dirs = "5.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
clap = { workspace = true }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
